[package]
name = "easyjack"
version = "0.1.2"
authors = ["David Zmick <dpzmick@gmail.com>"]
description = "Easy, rusty, bindings for the jack api"
documentation = "https://docs.rs/easyjack"
homepage = "https://github.com/dpzmick/rust-easyjack"
repository = "https://github.com/dpzmick/rust-easyjack"
readme = "README.md"
license = "MIT"
build = "build.rs"

[dependencies]
bitflags = "0.7"
getopts = "0.2.4"
jack-sys = "0.1.2"
libc = "0.2"
nix = "0.7.0"
num = "0.1"
